--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <display-name>Archetype Created Web Application</display-name>
 
     <servlet>
-        <servlet-name>MySpringMVC</servlet-name>
+        <servlet-name>springDispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -14,7 +14,7 @@
         </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>MySpringMVC</servlet-name>
+        <servlet-name>springDispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
